@@ -64,7 +64,7 @@
 		/** LED mask for the library LED driver, to indicate that an error has occurred in the USB interface. */
 		#define LEDMASK_USB_ERROR        (LEDS_LED1 | LEDS_LED3)
 		
-		#define AUDIO_SAMPLE_FREQUENCY   24000
+		#define AUDIO_SAMPLE_FREQUENCY    24000
 		
 	/* Function Prototypes: */
 		void SetupHardware(void);
